rentalController, swagger, pageable, preauthorize